[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect"
description = "Dissect is a digital forensics & incident response framework and toolset that allows you to quickly access and analyse forensic artefacts from various disk and file formats, developed by Fox-IT (part of NCC Group)"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Affero General Public License v3"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.archive==1.6",
    "dissect.btrfs==1.7",
    "dissect.cim==3.12",
    "dissect.clfs==1.10",
    "dissect.cstruct==4.5",
    "dissect.esedb==3.16",
    "dissect.etl==3.11",
    "dissect.eventlog==3.10",
    "dissect.evidence==3.11",
    "dissect.executable==1.8",
    "dissect.extfs==3.13",
    "dissect.fat==3.12",
    "dissect.ffs==3.11",
    "dissect.fve==4.2; platform_system != 'Windows' or platform_python_implementation != 'PyPy'",
    "dissect.hypervisor==3.18",
    "dissect.jffs==1.5",
    "dissect.ntfs==3.14",
    "dissect.ole==3.11",
    "dissect.qnxfs==1.0",
    "dissect.regf==3.13",
    "dissect.shellitem==3.11",
    "dissect.sql==3.11",
    "dissect.squashfs==1.9",
    "dissect.target[full]==3.22",
    "dissect.thumbcache==1.10",
    "dissect.util==3.21",
    "dissect.vmfs==3.11",
    "dissect.volume==3.15",
    "dissect.xfs==3.12",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools"
repository = "https://github.com/fox-it/dissect"

[project.optional-dependencies]
lz4 = [
    "dissect.util[lz4]",
]
lzo = [
    "dissect.util[lzo]",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
